--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 </head>
 <body>
   <header>
-    <h1>Avicoli Macello</h1>
+    <h1>Avicoli Macello - 2025</h1>
     <div class="subtitle">Avicoli prenotati da macellare nelle festività natalizie</div>
-    <div class="beta-row"><span class="beta-pill">Beta 0</span></div>
+    <div class="beta-row"><span class="beta-pill">Beta 1</span></div>
     <div class="hero">
       <img src="https://static.wixstatic.com/media/9d749b_ccdf4c6f024b477884a2f3ed7ce26053~mv2.png" alt="Avicoli" />
     </div>
@@ -128,7 +128,7 @@
     <section id="view-totali" data-view>
       <section class="panel"><b>Totali</b><div class="muted">Pagina in costruzione</div></section>
       <div class="demo">
-        <div class="box tot">FAKE PAGE • Contenuto dimostrativo per la vista <b>Totali</b>.</div>
+        <div class="box tot">Avicoli Macello - AV <b>Totali</b>.</div>
       </div>
     </section>
   </div>
