--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!doctype html>
 <html lang="it">
 <head>
+  <!-- PWA manifest (minimal, edge-to-edge) -->
+<link rel="manifest" href="/site.webmanifest">
+<meta name="theme-color" content="#7a0e0e">
+
+<!-- iOS / iPadOS (edge-to-edge) -->
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="167x167" href="/apple-touch-icon-167x167.png">
+<link rel="apple-touch-icon" sizes="174x174" href="/apple-touch-icon-174x174.png">
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Stòc">
+
+<!-- Favicons -->
+<link rel="icon" type="image/png" sizes="32x32" href="/icon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/icon-16x16.png">
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Avicoli Macello – Base</title>
