--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Avicoli Macello – Base</title>
+  <title>Ocapì - Avicoli Macello</title>
   <style>
     html, body { height:100%; background:#000; }
     body { margin:0; font-family:-apple-system,system-ui,Segoe UI,Roboto,sans-serif; color:#fff; }
@@ -118,7 +118,7 @@
 </head>
 <body>
   <header>
-    <h1>Avicoli Macello - 2025</h1>
+    <h1>Ocapì - Avicoli Macello</h1>
     <div class="subtitle">Avicoli prenotati da macellare nelle festività natalizie</div>
     <div class="beta-row"><span class="beta-pill">Beta 1</span></div>
     <div class="hero">
