--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <!-- PWA manifest (minimal, edge-to-edge) -->
-<link rel="manifest" href="/site.webmanifest">
+<link rel="manifest" href="/bottega-avicoli/site.webmanifest">
 <meta name="theme-color" content="#7a0e0e">
 
 <!-- iOS / iPadOS (edge-to-edge) -->
