--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- PWA manifest (minimal, edge-to-edge) -->
 <link rel="manifest" href="/bottega-avicoli/site.webmanifest">
-<meta name="theme-color" content="#7a0e0e">
+<meta name="theme-color" content="#770505">
 
 <!-- iOS / iPadOS (edge-to-edge) -->
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
