--- a/index.html
+++ b/index.html
@@ -1,141 +1,195 @@
 <!doctype html>
-<html lang="it">
+<html lang="it" data-ocapi>
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>Master</title>
+  <title>OcaPì – Totali avicoli</title>
   <style>
-    html,body{height:100%;margin:0}
     :root{
-      --main:#770505; --fg:#f5f5f7; --radius:14px;
+      --bg:#0a0a0b; --panel:#1c1e22; --panel-soft:#181a1e; --fg:#f7f7f8; --muted:#b8b9bd; --hi:#ffd60a;
+      --oc:#3b82f6; --an:#e94242; --cap:#f1b000; --ok:#34c759;
+      --inc:#34c759; --dec:#ff6b6b;
+      --radius:18px; --shadow:0 10px 30px rgba(0,0,0,.35); --shadow-soft:0 6px 18px rgba(0,0,0,.25);
     }
-    body{
-      background:var(--main);
-      color:var(--fg);
-      font:16px/1.4 -apple-system,system-ui,Segoe UI,Roboto,sans-serif;
-      display:flex;flex-direction:column;min-height:100vh;
-    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{font-family:-apple-system,system-ui,Segoe UI,Roboto,sans-serif;background:var(--bg);color:var(--fg);padding:12px;display:flex;flex-direction:column;align-items:center;gap:12px}
+    .panel{background:var(--panel);border-radius:var(--radius);padding:22px 18px 24px;box-shadow:var(--shadow);max-width:420px;width:100%;display:grid;gap:18px}
+    .panel.soft{background:var(--panel-soft);box-shadow:var(--shadow-soft)}
 
-    header{
-      background:var(--main);
-      display:flex;
-      justify-content:center;
-      align-items:center;
-      gap:20px;
-      padding:12px 0 8px;
-    }
-    header img{
-      height:52px;width:auto;display:block;
-    }
+    .panel-header{text-align:center;margin-bottom:4px}
+    .panel-header h1{font-size:18px;font-weight:800;color:var(--hi);text-transform:uppercase;letter-spacing:.4px;line-height:1.3}
+    .panel-header p{font-size:13px;color:var(--muted);font-weight:500;letter-spacing:.2px;margin-top:2px}
 
-    nav[role="tablist"]{
-      position:sticky;top:0;z-index:20;
-      background:var(--main);
-      display:flex;justify-content:center;gap:8px;
-      padding:12px 8px 16px;
-    }
-    .tab{
-      appearance:none;
-      border:1px solid rgba(255,255,255,.25);
-      background:transparent;
-      color:#fff;
-      padding:10px 14px;
-      border-radius:999px;
-      cursor:pointer;
-      font-weight:700;
-      font-size:13px;
-      letter-spacing:.2px;
-      transition:transform .05s ease,background .2s,color .2s,border-color .2s;
-    }
-    .tab:hover{background:rgba(255,255,255,.15)}
-    .tab:active{transform:scale(.98)}
-    .tab[aria-selected="true"]{background:#fff;color:var(--main);border-color:#fff}
+    .bars{display:grid;gap:12px}
+    .row{display:grid;grid-template-columns:88px 1fr 64px;align-items:center;gap:8px}
+    .lbl{font-weight:700;font-size:15px;letter-spacing:.25px;color:#fff;text-transform:uppercase;text-align:left}
+    .bar{height:20px;border-radius:10px;background:#121316;overflow:hidden;position:relative;border:1px solid #0e0f11}
+    .bar b{display:block;height:100%;border-radius:inherit;box-shadow:inset 0 0 0 1px #fff2;width:0}
+    .oche b{background:linear-gradient(90deg,var(--oc),#a0c0ff)}
+    .anatre b{background:linear-gradient(90deg,var(--an),#ffadad)}
+    .capponi b{background:linear-gradient(90deg,var(--cap),#ffe08f)}
+    .polli b{background:linear-gradient(90deg,var(--ok),#a8f5bd)}
+    .val{text-align:right;font-weight:800;font-size:22px;color:#fff}
 
-    main{flex:1;display:flex;align-items:center;justify-content:center;padding:20px;}
-    [data-view]{display:none;width:100%;height:100%;}
-    [data-view].active{display:flex;animation:fade .18s ease-out;}
-    @keyframes fade{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:none}}
+    .divider{height:1px;background:#2b2c30;margin:8px 0 0;border:none;opacity:.7}
+    .cut{height:1px;background:#3a3b40;margin:8px 0;border:none;opacity:.9}
 
-    .panel{
-      flex:1;
-      background:#fff;
-      color:#000;
-      border-radius:var(--radius);
-      min-height:70vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-size:32px;
-      font-weight:700;
-      box-shadow:0 0 20px rgba(0,0,0,.3);
-      overflow:hidden;
-    }
-    .panel iframe{
-      width:100%;
-      height:100%;
-      border:0;
+    .totale-wrapper{text-align:center;display:grid;gap:8px;margin-top:0}
+    .totale-header{display:flex;justify-content:center;align-items:baseline;gap:6px;position:relative;top:-10px}
+    .totale-header .label{text-transform:uppercase;font-size:12px;font-weight:700;letter-spacing:.2px;color:#a7a7aa}
+    .totale-header .count{font-size:38px;font-weight:900;color:var(--hi)}
+
+    .secondary{display:grid;gap:10px}
+    .totale-line{display:flex;align-items:baseline;justify-content:center;gap:8px}
+    .totale-line .val{font-size:22px;font-weight:800;color:#fff;line-height:1.1}
+    .totale-line .subtext{text-transform:uppercase;font-size:12px;font-weight:700;letter-spacing:.2px;color:#a7a7aa;position:relative;top:-4px}
+
+    .record-wrap{display:flex;align-items:center;justify-content:center;gap:8px;margin-top:4px}
+    .record-bar{width:70%;height:10px;background:#1a1c20;border-radius:10px;overflow:hidden;border:1px solid #111318}
+    .record-bar b{display:block;height:100%;background:linear-gradient(90deg,var(--hi),#ffe88a);width:0;border-radius:inherit;transform-origin:left center}
+    .record-wrap .target{font-size:12px;font-weight:700;color:#a7a7aa;line-height:1}
+
+    /* BLOCCO CONFRONTO EVOLUTIVO 2023 / 2024 / 2025 */
+    .evo{display:grid;gap:12px;margin-top:4px}
+    .evo h3{font-size:12px;color:#a7a7aa;text-transform:uppercase;font-weight:800;letter-spacing:.28px;text-align:left}
+    .evo-row{display:grid;grid-template-columns:88px 1fr auto;align-items:center;gap:8px}
+    .evo-row.oche{--cat:var(--oc)}
+    .evo-row.anatre{--cat:var(--an)}
+    .evo-row.capponi{--cat:var(--cap)}
+    .evo-row.polli{--cat:var(--ok)}
+    .evo-bars{display:grid;grid-template-columns:repeat(3,1fr);gap:4px}
+    .evo-bars .seg{height:8px;border-radius:10px;overflow:hidden;background:var(--cat);opacity:.35;width:0}
+    .evo-bars .seg.y24{opacity:.6}
+    .evo-bars .seg.y25{opacity:1}
+    .evo-val{font-size:13px;color:#cfd0d3;font-weight:700;text-align:right}
+    .evo-val .pct{font-weight:800;margin-left:6px}
+    .evo-val .pct.inc{color:var(--inc)}
+    .evo-val .pct.dec{color:var(--dec)}
+
+    @media (max-width:430px){
+      body{padding:10px}
+      .panel{padding:18px 14px}
+      .panel-header h1{font-size:16px}
+      .panel-header p{font-size:12px}
+      .lbl{font-size:14px}
+      .row{grid-template-columns:78px 1fr 58px}
+      .bar{height:18px}
+      .val{font-size:20px}
+      .totale-header .count{font-size:32px}
+      .totale-line .val{font-size:28px}
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="svg-molino.png" alt="Molino" />
-    <img src="svg-bottega.png" alt="Bottega" />
-    <img src="svg-cascina.png" alt="Cascina" />
-  </header>
+  <!-- CONTENITORE 1: Situazione attuale -->
+  <section class="panel">
+    <div class="panel-header">
+      <h1>TOTALE AVICOLI PRENOTATI ANCORA DA RITIRARE</h1>
+      <p>Da oggi fino a fine festività</p>
+    </div>
 
-  <nav class="tabs" role="tablist" aria-label="Navigazione viste">
-    <button class="tab" role="tab" data-tab="inserisci" aria-selected="true">Inserisci</button>
-    <button class="tab" role="tab" data-tab="gestisci" aria-selected="false">Gestisci</button>
-    <button class="tab" role="tab" data-tab="stoc" aria-selected="false">Stòc</button>
-    <button class="tab" role="tab" data-tab="ocapi" aria-selected="false">Ocapì</button>
-    <button class="tab" role="tab" data-tab="trua" aria-selected="false">Truà</button>
-  </nav>
+    <div class="bars">
+      <div class="row oche"><div class="lbl">OCHE</div><div class="bar"><b></b></div><div class="val">7</div></div>
+      <div class="row anatre"><div class="lbl">ANATRE</div><div class="bar"><b></b></div><div class="val">23</div></div>
+      <div class="row capponi"><div class="lbl">CAPPONI</div><div class="bar"><b></b></div><div class="val">3</div></div>
+      <div class="row polli"><div class="lbl">POLLI</div><div class="bar"><b></b></div><div class="val">33</div></div>
+    </div>
 
-  <main>
-    <section id="view-inserisci" data-view class="active" aria-labelledby="tab-inserisci">
-      <div class="panel">
-        <iframe src="https://www.molinosantamarta.it/ordini-bottega" title="Molino Santa Marta"></iframe>
+    <hr class="divider" />
+
+    <div class="totale-wrapper">
+      <div class="totale-header">
+        <div class="label">ANCORA DA RITIRARE</div>
+        <div class="count">24</div>
       </div>
-    </section>
-    <section id="view-gestisci" data-view aria-labelledby="tab-gestisci">
-      <div class="panel">
-        <iframe src="https://docs.google.com/spreadsheets/d/1Z8cPY_JvFsIgt-vli10gAqPJm9EDHZTuKk_BC_wzoAQ/edit?gid=0#gid=0"></iframe>
+    </div>
+  </section>
+
+  <!-- CONTENITORE 2: Storico e confronto -->
+  <section class="panel soft">
+    <div class="secondary">
+      <div class="totale-line">
+        <div class="val">77</div>
+        <div class="subtext">AVICOLI ORDINATI</div>
       </div>
-    </section>
-    <section id="view-stoc" data-view aria-labelledby="tab-stoc">
-      <div class="panel">"Stòc"</div>
-    </section>
-    <section id="view-ocapi" data-view aria-labelledby="tab-ocapi">
-      <div class="panel">"Ocapì"</div>
-    </section>
-    <section id="view-trua" data-view aria-labelledby="tab-trua">
-      <div class="panel">"Truà"</div>
-    </section>
-  </main>
+      <div class="record-wrap"><div class="record-bar"><b></b></div><span class="target">187</span></div>
+
+      <div class="evo">
+        <h3>Andamento per categoria (2023–2025)</h3>
+        <div class="evo-row oche" data-y2023="71" data-y2024="73" data-y2025="48">
+          <div class="lbl">OCHE</div>
+          <div class="evo-bars"><div class="seg y23"></div><div class="seg y24"></div><div class="seg y25"></div></div>
+          <div class="evo-val">48 <span class="pct"></span></div>
+        </div>
+        <div class="evo-row anatre" data-y2023="26" data-y2024="23" data-y2025="29">
+          <div class="lbl">ANATRE</div>
+          <div class="evo-bars"><div class="seg y23"></div><div class="seg y24"></div><div class="seg y25"></div></div>
+          <div class="evo-val">29 <span class="pct"></span></div>
+        </div>
+        <div class="evo-row capponi" data-y2023="87" data-y2024="71" data-y2025="58">
+          <div class="lbl">CAPPONI</div>
+          <div class="evo-bars"><div class="seg y23"></div><div class="seg y24"></div><div class="seg y25"></div></div>
+          <div class="evo-val">58 <span class="pct"></span></div>
+        </div>
+        <div class="evo-row polli" data-y2023="20" data-y2024="21" data-y2025="64">
+          <div class="lbl">POLLI</div>
+          <div class="evo-bars"><div class="seg y23"></div><div class="seg y24"></div><div class="seg y25"></div></div>
+          <div class="evo-val">64 <span class="pct"></span></div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script>
-    const VIEWS=["inserisci","gestisci","stoc","ocapi","trua"];
-    const $$=(s)=>Array.from(document.querySelectorAll(s));
-
-    function activate(view){
-      if(!VIEWS.includes(view)) view='inserisci';
-      VIEWS.forEach(v=>{
-        const el=document.getElementById('view-'+v);
-        if(!el) return;
-        el.classList.toggle('active',v===view);
-      });
-      $$('.tab').forEach(btn=>btn.setAttribute('aria-selected',btn.dataset.tab===view?'true':'false'));
-    }
-
-    document.querySelector('[role="tablist"]').addEventListener('click',e=>{
-      const b=e.target.closest('.tab');
-      if(!b) return;
-      const v=b.dataset.tab;
-      activate(v);
+    // Barre categoria (contenitore 1) animate in base al numero a destra
+    const rows = Array.from(document.querySelectorAll('.bars .row'));
+    const values = rows.map(r => parseInt(r.querySelector('.val').textContent.trim(), 10) || 0);
+    const max = Math.max(...values, 1);
+    rows.forEach(r => {
+      const v = parseInt(r.querySelector('.val').textContent.trim(), 10) || 0;
+      const pct = Math.max(0, Math.min(100, (v / max) * 100));
+      const bar = r.querySelector('.bar b');
+      bar.style.width = '0%';
+      bar.style.transition = 'width .6s ease';
+      bar.style.transformOrigin = 'left center';
+      requestAnimationFrame(()=>{ bar.style.width = pct + '%'; });
     });
 
-    activate('inserisci');
+    // Barra gialla dinamica (77 su 187) nel contenitore 2
+    const targetEl = document.querySelector('.record-wrap .target');
+    const target = parseInt(targetEl.textContent.trim(), 10) || 187; // fisso
+    const currentEl = document.querySelector('.totale-line .val');
+    const current = parseInt(currentEl.textContent.trim(), 10) || 0;
+    const barEl = document.querySelector('.record-bar b');
+    const pctRecord = Math.max(0, Math.min(100, (current / target) * 100));
+    barEl.style.width = '0%';
+    barEl.style.transition = 'width .8s ease';
+    barEl.style.transformOrigin = 'left center';
+    requestAnimationFrame(()=>{ barEl.style.width = pctRecord + '%'; });
+
+    // Confronto evolutivo 2023-2025: tre micro-barre per riga, normalizzate sul max della riga
+    const evoRows = Array.from(document.querySelectorAll('.evo-row'));
+    evoRows.forEach(r => {
+      const y23 = parseInt(r.dataset.y2023||'0',10);
+      const y24 = parseInt(r.dataset.y2024||'0',10);
+      const y25 = parseInt(r.dataset.y2025||'0',10);
+      const vmax = Math.max(y23,y24,y25,1);
+
+      const segs = r.querySelectorAll('.evo-bars .seg');
+      const widths = [y23,y24,y25].map(v=> Math.max(0, Math.min(100, (v / vmax) * 100)) + '%');
+      segs.forEach((seg,i)=>{
+        seg.style.transition = 'width .6s ease';
+        seg.style.width = '0%';
+        requestAnimationFrame(()=>{ seg.style.width = widths[i]; });
+      });
+
+      // percentuale dal 2023 al 2025
+      const pctEl = r.querySelector('.evo-val .pct');
+      const pct = y23 === 0 ? 100 : Math.round(((y25 - y23) / y23) * 100);
+      pctEl.textContent = (pct>0?`(+${pct}%)`:`(${pct}%)`);
+      pctEl.classList.toggle('inc', pct>0);
+      pctEl.classList.toggle('dec', pct<0);
+    });
   </script>
 </body>
 </html>
