--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ body{
   .no-glow #agenda .summary .line{animation:fadeUpAgenda .6s forwards; background:none; -webkit-text-fill-color:unset; color:#9ea1a5}
   #agenda #delta .line { display:inline-block; width:100%; text-align:center; }
   #avanz .hd { display:flex; flex-direction:column; align-items:center; justify-content:center; }
-  #avanz .hd h1.ico { display:flex; align-items:center; justify-content:center; }
+  #avanz .hd h1 { display:flex; align-items:center; justify-content:center; gap:8px; }
+  #avanz .lottie-ico{display:inline-block; width:1em; height:1em; vertical-align:middle}
 
   #agenda .tot{display:inline-block;font-weight:900;color:var(--accent);background:transparent;border:none;padding:0;min-width:auto;font-size:14px;letter-spacing:.2px}
   #agenda .tot-foot{display:inline-block;font-weight:900;color:var(--accent);background:transparent;border:none;padding:0;min-width:auto;font-size:14px;letter-spacing:.2px}
@@ -169,7 +170,6 @@ body{
   .ico{display:inline-flex;align-items:center;gap:8px;color:#f2cf57}
   .ico::before{content:"";display:inline-block;width:1.05em;height:1.05em;background:currentColor;mask-size:contain;mask-repeat:no-repeat;mask-position:center;-webkit-mask-size:contain;-webkit-mask-repeat:no-repeat;-webkit-mask-position:center;margin-right:6px}
   .ico-cal::before{mask:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M6 2h2v4H6zM16 2h2v4h-2z'/><rect x='3' y='4' width='18' height='17' rx='3'/><rect x='3' y='8' width='18' height='13'/></svg>");-webkit-mask:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M6 2h2v4H6zM16 2h2v4h-2z'/><rect x='3' y='4' width='18' height='17' rx='3'/><rect x='3' y='8' width='18' height='13'/></svg>")}
-  .ico-trophy::before{mask:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M5 4h14v2a4 4 0 0 1-4 4h-1a5 5 0 0 1-4 0H9A4 4 0 0 1 5 6V4z'/><path d='M8 20h8l-2-4h-4l-2 4z'/></svg>");-webkit-mask:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><path d='M5 4h14v2a4 4 0 0 1-4 4h-1a5 5 0 0 1-4 0H9A4 4 0 0 1 5 6V4z'/><path d='M8 20h8l-2-4h-4l-2 4z'/></svg>")}
   .dot-blink{width:9px;height:9px;border-radius:50%;background:#f2cf57;display:inline-block;margin-right:8px;box-shadow:0 0 10px rgba(242,207,87,.9);animation:dotBlink .9s infinite alternate}
   @keyframes dotBlink{from{opacity:.45;transform:scale(.9)}to{opacity:1;transform:scale(1)}}
 </style>
@@ -204,6 +204,37 @@ body{
   </div>
 </section>
 
+<section id="avanz" class="block" aria-labelledby="bl3">
+  <h1 id="bl3" class="block-title">Blocco 3 • Avanzamento 2025 e confronti</h1>
+  <main class="wrap">
+    <section class="card" id="card-total">
+      <div class="hd">
+        <h1>
+          <span id="trophyAnim" class="lottie-ico" aria-hidden="true"></span>
+          TOTALE AVICOLI 2025
+        </h1>
+        <p>Tutti gli avicoli ordinati finora</p>
+      </div>
+      <div class="totale">
+        <div class="tot-row"><span class="lbl">Totale 2025</span><span class="val" id="tot2025">0</span></div>
+        <div class="progline"><div class="prog"><b id="progFill"></b></div><span class="cap" id="capRecord">204</span></div>
+      </div>
+      <p class="note">204 avicoli prenotati, record del 2023</p>
+    </section>
+
+    <section class="card" id="card-compare">
+      <div class="sect-hd">Confronto avicoli negli anni</div>
+      <div class="rows" id="rows"></div>
+      <div class="legend" aria-hidden="true">
+        <span><i class="dot y2025"></i>2025</span>
+        <span><i class="dot y2024"></i>2024</span>
+        <span><i class="dot y2023"></i>2023</span>
+      </div>
+      <p class="note">variazione % sull'anno precedente · 2025 da CSV · 2023–2024 fissi</p>
+    </section>
+  </main>
+</section>
+
 <section class="block" id="prenotati" aria-labelledby="bl2">
   <h1 id="bl2" class="block-title">Blocco 2 • Avicoli prenotati</h1>
   <section data-ocapi>
@@ -235,33 +266,7 @@ body{
   </section>
 </section>
 
-<section id="avanz" class="block" aria-labelledby="bl3">
-  <h1 id="bl3" class="block-title">Blocco 3 • Avanzamento 2025 e confronti</h1>
-  <main class="wrap">
-    <section class="card" id="card-total">
-      <div class="hd">
-        <h1 class="ico ico-trophy">TOTALE AVICOLI 2025</h1>
-        <p>Tutti gli avicoli ordinati finora</p>
-      </div>
-      <div class="totale">
-        <div class="tot-row"><span class="lbl">Totale 2025</span><span class="val" id="tot2025">0</span></div>
-        <div class="progline"><div class="prog"><b id="progFill"></b></div><span class="cap" id="capRecord">204</span></div>
-      </div>
-      <p class="note">204 avicoli prenotati, record del 2023</p>
-    </section>
-
-    <section class="card" id="card-compare">
-      <div class="sect-hd">Confronto avicoli negli anni</div>
-      <div class="rows" id="rows"></div>
-      <div class="legend" aria-hidden="true">
-        <span><i class="dot y2025"></i>2025</span>
-        <span><i class="dot y2024"></i>2024</span>
-        <span><i class="dot y2023"></i>2023</span>
-      </div>
-      <p class="note">variazione % sull'anno precedente · 2025 da CSV · 2023–2024 fissi</p>
-    </section>
-  </main>
-</section>
+<script src="https://unpkg.com/lottie-web/build/player/lottie.min.js"></script>
 
 <script type="module">
 const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vS6a2Ij-RW70-i-hk_Qw_0gChVKzsVljdvMjSNwqpF4CXyeHfDurxRBIcGa8AEd0HR-tNW6y_LZSn5t/pub?gid=2121991604&single=true&output=csv";
@@ -440,14 +445,13 @@ function renderAgenda(weeks){
   const statsEl = agenda.querySelector('#stats');
   const deltaEl = agenda.querySelector('#delta');
 
-  const firstRunKey = "agendaGlowDone";
-  if (localStorage.getItem(firstRunKey)) document.body.classList.add("no-glow"); else localStorage.setItem(firstRunKey, "1");
+  if (localStorage.getItem("agendaGlowDone")) document.body.classList.add("no-glow"); else localStorage.setItem("agendaGlowDone", "1");
 
   const cell = v => v ? `<span class="v" style="background-color:rgba(255,214,10,${getOpacity(v)})">${v}</span>` : '';
   const totCell = v => v ? `<span class="tot">${v}</span>` : '';
 
   const todayKey = mondayOf(new Date()).toISOString().slice(0,10);
-  let idx = Math.max(0, weeks.findIndex(w => w.key === todayKey));
+  let idx = weeks.findIndex(w => w.key === todayKey);
   if (idx < 0) idx = weeks.length - 1;
 
   function renderWeek(){
@@ -500,12 +504,15 @@ function renderAgenda(weeks){
 
     statsEl.innerHTML = maxVal>0 ? `<span class="line" style="animation-delay:300ms">La media giornaliera è di ${avg} capi, ${busiest}</span>` : '';
 
-    let perc = 0;
-    if (idx > 0) {
+    let deltaHtml = '';
+    if (idx > 0 && tot[4] > 0) {
       const prevTot = weeks[idx-1].rows.reduce((a,r)=>a+r[5],0);
-      if (prevTot > 0) perc = Math.round(((tot[4]-prevTot)/prevTot)*100);
+      if (prevTot > 0) {
+        const perc = Math.round(((tot[4]-prevTot)/prevTot)*100);
+        if (perc !== 0) deltaHtml = `<span class="line" style="animation-delay:600ms">${perc>=0?`+${perc}%`:`${perc}%`} rispetto alla settimana precedente</span>`;
+      }
     }
-    deltaEl.innerHTML = `<span class="line" style="animation-delay:600ms">${perc>=0?`+${perc}%`:`${perc}%`} rispetto alla settimana precedente</span>`;
+    deltaEl.innerHTML = deltaHtml;
 
     const atStart = (idx === 0);
     const atEnd = (idx === weeks.length - 1);
@@ -664,7 +671,22 @@ function runSelfTests(){
   } catch(e){ console.warn("SelfTest error:", e); }
 }
 
+function initLottie(){
+  const el = document.getElementById('trophyAnim');
+  if (window.lottie && el){
+    lottie.loadAnimation({
+      container: el,
+      renderer: 'svg',
+      loop: true,
+      autoplay: true,
+      path: 'trofeo-lotties.json',
+      rendererSettings: { preserveAspectRatio: 'xMidYMid meet' }
+    });
+  }
+}
+
 (async function main(){
+  initLottie();
   runSelfTests();
   try{
     const { recs, totalAll, totalsByCat } = await loadData();
@@ -673,7 +695,7 @@ function runSelfTests(){
     const remaining = buildRemaining(recs, new Date());
     renderPrenotati(remaining);
     renderAvanzamento(null, totalAll, totalsByCat);
-  } catch ( err ){
+  } catch {
     renderAgenda(buildWeeksAllYear([]));
     renderPrenotati({o:0,a:0,c:0,p:0,total:0});
     renderAvanzamento(null, undefined, null);
