--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body{
   #agenda { --bg:#0b0b0c; --panel:#16181c; --border:#2b2d31; --text:#f5f5f7; --accent:#ffd60a; --muted:#9ea1a5; --radius:10px; --shadow:0 6px 18px rgba(0,0,0,.35);
             --tot-week-bg:#ffd60a; --tot-week-text:#000; }
   #agenda .a-root{background:var(--bg); color:var(--text); display:flex; flex-direction:column; align-items:center; gap:12px; width:100%;}
-  #agenda .a-root h1{font-size:18px;font-weight:800;color:var(--accent);text-transform:uppercase;letter-spacing:.4px;margin:0}
+  #agenda .a-root h1{font-size:18px;font-weight:800;color:var(--accent);text-transform:uppercase;letter-spacing:.4px;margin:0;display:flex;align-items:center;gap:8px}
 
   #agenda .week-nav{display:flex;align-items:center;gap:10px;background:var(--panel);border:1px solid var(--border);border-radius:12px;padding:6px 10px;box-shadow:var(--shadow)}
   #agenda .btn{appearance:none;border:1px solid var(--border);background:#121317;color:var(--text);border-radius:10px;padding:6px 10px;font-weight:800;cursor:pointer;line-height:1;display:flex;align-items:center;justify-content:center;min-width:36px}
@@ -67,13 +67,12 @@ body{
 
   .no-glow #agenda .summary .line{animation:fadeUpAgenda .6s forwards; background:none; -webkit-text-fill-color:unset; color:#9ea1a5}
   #agenda #delta .line { display:inline-block; width:100%; text-align:center; }
-  #avanz .hd { display:flex; flex-direction:column; align-items:center; justify-content:center; }
-  #avanz .hd h1 { display:flex; align-items:center; justify-content:center; gap:8px; }
-  #avanz .lottie-ico{display:inline-block; width:2em; height:2em; vertical-align:middle}
 
   #agenda .tot{display:inline-block;font-weight:900;color:var(--accent);background:transparent;border:none;padding:0;min-width:auto;font-size:14px;letter-spacing:.2px}
   #agenda .tot-foot{display:inline-block;font-weight:900;color:var(--accent);background:transparent;border:none;padding:0;min-width:auto;font-size:14px;letter-spacing:.2px}
   #agenda .td-tot-week{background:var(--tot-week-bg)!important;color:var(--tot-week-text)!important;font-weight:900}
+
+  .lottie-ico{display:inline-block;width:1em;height:1em;vertical-align:middle}
 
   @media(max-width:560px){
     #agenda .a-root{padding:10px}
@@ -134,8 +133,8 @@ body{
   #avanz .wrap{width:100%;max-width:var(--container-w);display:grid;gap:14px}
   #avanz .card{background:var(--panel);border:1px solid var(--hair);border-radius:var(--radius);box-shadow:var(--shadow);padding:16px 14px;display:grid;gap:12px}
   #avanz .hd{display:grid;gap:4px;text-align:center}
-  #avanz .hd h1{font-size:18px;font-weight:900;letter-spacing:.25px;color:var(--hl);margin:0}
-  #avanz .hd p{font-size:12.5px;color:var(--muted);margin:0}
+  #avanz .hd h1{font-size:18px;font-weight:900;letter-spacing:.25px;color:var(--hl);margin:0;display:flex;align-items:center;justify-content:center;gap:8px}
+  #avanz .hd p{font-size:12.5px;color:#a7abb1;margin:0}
   #avanz .totale{display:grid;gap:10px}
   #avanz .tot-row{display:flex;justify-content:space-between;align-items:baseline}
   #avanz .tot-row .lbl{font-size:13px;color:#cfd3d8;font-weight:800;letter-spacing:.2px;text-transform:uppercase}
@@ -179,7 +178,10 @@ body{
 <section id="agenda" class="block" aria-labelledby="bl1">
   <h1 id="bl1" class="block-title">Blocco 1 • Agenda macellazione</h1>
   <div class="a-root" aria-label="Agenda macellazione">
-    <h1 class="ico ico-cal">Agenda Macellazione</h1>
+    <h1>
+      <span id="calendarAnim" class="lottie-ico" aria-hidden="true"></span>
+      Agenda Macellazione
+    </h1>
     <div class="week-nav" role="group" aria-label="Seleziona settimana">
       <button id="prev" class="btn" type="button" aria-label="Settimana precedente" aria-disabled="false">◀</button>
       <div class="range" id="range">—</div>
@@ -672,14 +674,25 @@ function runSelfTests(){
 }
 
 function initLottie(){
-  const el = document.getElementById('trophyAnim');
-  if (window.lottie && el){
+  const trophy = document.getElementById('trophyAnim');
+  if (window.lottie && trophy){
     lottie.loadAnimation({
-      container: el,
+      container: trophy,
       renderer: 'svg',
       loop: true,
       autoplay: true,
       path: 'trofeo-lotties.json',
+      rendererSettings: { preserveAspectRatio: 'xMidYMid meet' }
+    });
+  }
+  const cal = document.getElementById('calendarAnim');
+  if (window.lottie && cal){
+    lottie.loadAnimation({
+      container: cal,
+      renderer: 'svg',
+      loop: true,
+      autoplay: true,
+      path: 'calendar-lotties.json',
       rendererSettings: { preserveAspectRatio: 'xMidYMid meet' }
     });
   }
