--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ body{
         <span><i class="dot y2024"></i>2024</span>
         <span><i class="dot y2023"></i>2023</span>
       </div>
-      <p class="note">variazione % sull'anno precedente · 2025 da CSV · 2023–2024 fissi</p>
+      <p class="note">variazione % anno in corso sull'anno precedente</p>
     </section>
   </main>
 </section>
